pkg/mod/github.com/!michael!robotics/!kubernetes@v0.0.0-20250313134824-71cf651287f2/gatekeeper-vs-kyverno-demo/gatekeeper/block-node-port.yaml
---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
spec:
  match:
    scope: Namespaced
    kinds:
    - apiGroups: [""]
      kinds: ["Service"]
    namespaces:
    - prod-gatekeeper
