pkg/mod/github.com/!michael!robotics/!kubernetes@v0.0.0-20250313134824-71cf651287f2/gatekeeper-vs-kyverno-demo/gatekeeper/image-not-latest.yaml
---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: image-not-be-latest
spec:
  match:
    scope: Namespaced
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces:
    - prod-gatekeeper
  parameters:
    tags: ["latest"]
